style.css
/*## Layout

The designs were created to the following widths:

- Mobile: 375px
- Desktop: 1440px

## Colors

### Primary

- Purple: hsl(259, 100%, 65%)
- Light red: hsl(0, 100%, 67%)

### Neutral

- White: hsl(0, 0%, 100%)
- Off white: hsl(0, 0%, 94%)
- Light grey: hsl(0, 0%, 86%)
- Smokey grey: hsl(0, 1%, 44%)
- Off black: hsl(0, 0%, 8%)

## Typography

### Body Copy

- Font size (inputs): 32px

### Font

- Family: [Poppins](https://fonts.google.com/specimen/Poppins)
- Weights: 400i, 700, 800i*/
body{
    font-family: "Poppins", sans-serif;
    font-size: 10px;
    color: hsl(0, 0%, 8%);
    background-color: #d8d4d4;
    display: grid;
    min-height: 100vh;
    place-items: center;
    overflow: hidden;
}
.attribution {
    font-size: 11px;
    text-align: center;
    margin: 20px;
}
.attribution a {
    color: hsl(228, 45%, 44%);
}
.container{
    background-color: white;
    padding: 2rem 2rem 2rem 2rem;
    font-size: 1.25rem;
    border-radius: 20px 20px 25%;
}
.inputs{
    display: flex;
    flex-direction: row;
    font-size: 15px;
    gap: 20px;
    padding-right: 120px;
}
.inputs input{
    height: 29px;
    width: 5rem;
    border: 1px solid grey;
    border-radius: 7px;
    padding: 10px;
    margin-bottom: 10px;
    font-size: 32px;
    color: grey;
    -moz-appearance: textfield;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input::placeholder{
    font-weight: 700;
    color: hsl(0, 1%, 44%);
}
.line-and-button{
    display: flex;
    align-items: center;
    /*margin-top: 10px;*/
}
.line-and-button .line{
    flex-grow: 1;
    height: 1px;
    background-color: rgba(81, 79, 79, 0.56);
}
#line2{
    display: none;
}
button{
    height: 70px;
    width: 70px;
    border-radius: 50%;
    box-shadow: none;
    border: 1px black;
    background-color: hsl(259, 100%, 65%);
}
button:hover{
    cursor: pointer;
    background-color: hsl(0, 0%, 8%);
}
.calculated{
    font-size: 3rem;
    font-weight: 800;
    line-height: 10px;
}
.value{
    color: hsl(259, 100%, 65%);
    font-weight: 900;
}
.label-text{
    margin-bottom: 10px;
}
.error{
    font-size: 10px;
    font-weight: 400;
    color: hsl(0, 100%, 67%);
}
@media only screen and (max-width: 375px){
    body{
        overflow: hidden;
        /*min-height: 100%;*/
        /*width: 100vw;*/
        /*display: grid;*/
        /*place-items: center;*/
        margin: 0;
    }
    .container{
        width: 80%;
        margin: 10px;
        padding: 10px;
    }
    .inputs{
        padding: 0;
        width: 375px;
    }
    .inputs input{
        width: 75px;
    }
    #line2 {
        display: grid;
    }
    .line-and-button .line{
        flex-grow: 1;
    }
    .attribution{
        display: none;
    }
}

